tests/rosetta/out/C/break-oo-privacy.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:47Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:47Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
typedef struct foobar_t foobar_t;

static foobar_t obj;

typedef struct foobar_t {
  int Exported;
  int unexported;
} foobar_t;
typedef struct {
  int len;
  foobar_t *data;
} foobar_list_t;
foobar_list_t create_foobar_list(int len) {
  foobar_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(foobar_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

foobar_t examineAndModify(foobar_t *f) {
  char *tmp1 = _str(f->exported);
  char *tmp2 = concat_string(" v: {", tmp1);
  char *tmp3 = concat_string(tmp2, " ");
  char *tmp4 = _str(f->unexported);
  char *tmp5 = concat_string(tmp3, tmp4);
  char *tmp6 = concat_string(tmp5, "} = {");
  char *tmp7 = _str(f->exported);
  char *tmp8 = concat_string(tmp6, tmp7);
  char *tmp9 = concat_string(tmp8, " ");
  char *tmp10 = _str(f->unexported);
  char *tmp11 = concat_string(tmp9, tmp10);
  char *tmp12 = concat_string(tmp11, "}");
  printf("%s\n", tmp12);
  printf("    Idx Name       Type CanSet\n");
  printf("     0: Exported   int  true\n");
  printf("     1: unexported int  false\n");
  f->exported = 16;
  f->unexported = 44;
  printf("  modified unexported field via unsafe\n");
  return f;
}

int anotherExample() {
  printf("bufio.ReadByte returned error: unsafely injected error value into "
         "bufio inner workings\n");
}

int _mochi_main() {
  obj = (foobar_t){.exported = 12, .unexported = 42};
  char *tmp13 = _str(obj.exported);
  char *tmp14 = concat_string("obj: {", tmp13);
  char *tmp15 = concat_string(tmp14, " ");
  char *tmp16 = _str(obj.unexported);
  char *tmp17 = concat_string(tmp15, tmp16);
  char *tmp18 = concat_string(tmp17, "}");
  printf("%s\n", tmp18);
  obj = examineAndModify(&obj);
  char *tmp19 = _str(obj.exported);
  char *tmp20 = concat_string("obj: {", tmp19);
  char *tmp21 = concat_string(tmp20, " ");
  char *tmp22 = _str(obj.unexported);
  char *tmp23 = concat_string(tmp21, tmp22);
  char *tmp24 = concat_string(tmp23, "}");
  printf("%s\n", tmp24);
  anotherExample();
  return 0;
}
int main() { return _mochi_main(); }
